# LLM-Runner-Router

./: .env.example  .env.production  .env.staging  .env.test.example  .env.vps  .eslintrc.json  .gitignore  AGENTS.md  API_KEYS.md  BENCHMARK_RESULTS.md  BINDINGS.md  CHANGELOG.md  CLAUDE.md  COMPLETION-REPORT.md  CONTRIBUTING.md  DEPLOYMENT-COMMANDS.md  DEPLOYMENT.md  Dockerfile  ENV_VARIABLES.md  HETZNER-FIREWALL-FIX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NPM_SETUP.md  PROJECT-READY-SUMMARY.md  PROJECT_STATUS.md  README.md  REAL_CHAT_SETUP.md  SAAS-API-USAGE.md  SECURITY-RECOMMENDATIONS.md  WORKING_STATUS.md  alerts.json  check-rate-limiter.js  clean-exports.sh  configure-firewall.sh  deploy-production.sh  deploy-secure.sh  deployment-validation.js  docker-compose.prod.yml  docs-express-server.js  (+47 more)
.claude/: README.md  settings.json
.claude/commands/: analyze-models  analyze-models.md  dev-setup.md  run-benchmarks  run-benchmarks.md  test-model  test-model.md
.claude/hooks/: post-bash  post-edit  pre-bash
.github/: CONTRIBUTING.md
.github/workflows/: build-and-test.yml  cd.yml  ci.yml  release.yml  security.yml
backup/docs/: DEPLOYMENT-SECURITY.md  DEPLOYMENT.md  LOCAL_DEPLOYMENT_GUIDE.md  PRODUCTION-DEPLOYMENT-GUIDE.md  SECURITY-STATUS.md
backup/pm2/: ecosystem.optimized.config.cjs  ecosystem.prod.config.cjs  ecosystem.resilient.config.cjs  ecosystem.secure.config.cjs
backup/servers/: server-http.js  server-secure.js
backup/status/: AI_CHAT_INTERFACE_PROMPT.md  AUTONOMOUS-SETUP-COMPLETE.md  BITNET-SETUP.md  CLEANUP-COMPLETE.md  OLLAMA_CHAT_GUIDE.md  SIMPLE_GUIDE.md  SMOLLM3_SETUP_COMPLETE.md  SYSTEM_IMPROVEMENTS.md  WEBSITE_IMPROVEMENTS.md
backup/test-files/: test-actual-ai.js  test-chat-integration.mjs  test-chat-templates.js  test-local-smollm3.js  test-ollama-chat.js  test-production-chat.mjs  test-simple-smollm3.js  test-smollm3-chat.mjs  test-smollm3-integration.js  test-smollm3-simple.mjs  test-smollm3-updated.js  test-smollm3.mjs
backup/test-servers/: docs-express-server.js  local-smollm3-server.js  ollama-server.js  simple-server.js  simple-smollm3-chat-server.js
bindings/python/: README.md  requirements.txt  setup.py
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/examples/: basic_usage.rs
bindings/rust/src/: client.rs  config.rs  error.rs  lib.rs  models.rs
bindings/rust/src/protocols/: http.rs  mod.rs
bindings/rust/src/utils/: mod.rs  retry.rs
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/examples/: basic-usage.html
bindings/wasm/src/: client.rs  error.rs  lib.rs  models.rs  utils.rs  worker.rs
data/: api-keys.json  byok-keys.json  persistent-test-key.json  refresh-tokens.json  users.json
docs/: ADMIN-PANEL-GUIDE.md  ADMIN-PANEL-STATUS.md  ADVANCED-UTILITIES.md  API_DOCUMENTATION_PLAN.md  API_DOCUMENTATION_SUMMARY.md  API_PROVIDERS.md  ARCHITECTURE.md  AUTHENTICATION_PATTERNS.md  BENCHMARKS.md  BEST_PRACTICES.md  BITNET-INTEGRATION.md  BYOK-SYSTEM.md  CONFIG_REFERENCE.md  COST_OPTIMIZATION.md  CURRENT-STATUS.md  CUSTOM_LOADERS.md  DEPLOYMENT-TROUBLESHOOTING.md  DEPLOYMENT.md  ENGINE_DEVELOPMENT.md  ERROR_CODES.md  EXTENSION_ROADMAP.md  FEATURE-STATUS.md  HTTP-SECURITY-FIX.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  MEMORY_MANAGEMENT.md  MIGRATION.md  MODEL-MANAGER-GUIDE.md  MODEL_FORMATS.md  MODERN_CHAT_INTERFACE_INSTRUCTIONS.md  MONITORING.md  OLLAMA_SETUP.md  PROVIDER_ADAPTER_ARCHITECTURE.md  PROVIDER_INTEGRATION_CHECKLIST.md  README.md  SCALING.md  SECURITY.md  SELF-HEALING.md  STREAMING.md  TEMPLATE-SYSTEM.md  (+2 more)
docs/api/: ABTestingManager.html  APILoader.html  AnthropicAdapter.html  AuditLogger.html  AuthManager.html  AuthMiddleware.html  AzureOpenAIAdapter.html  BPETokenizer.html  BaseEngine.html  BaseLoader.html  BedrockAdapter.html  BinaryLoader.html  BinaryModel.html  BitNetLoader.html  COMPLETION_STATUS.md  CohereAdapter.html  ConversionConfig.html  ConversionResult.html  DOCUMENTATION_REVIEW.md  DeepSeekAdapter.html  EnterpriseAuthManager.html  EnterpriseManager.html  EnterpriseRouter.html  ErrorHandler.html  FireworksAdapter.html  FormatConverter.html  GGUFLoader.html  GGUFModel.html  GRPCClient.html  GroqAdapter.html  LLMRouter.html  MistralAdapter.html  MockLoader.html  MockModel.html  ModelError.html  ModelInterface.html  ModelQuantizer.html  ModelRegistry.html  ModelTemplates.html  MultiTenancyManager.html  (+107 more)
docs/archive/: AUTONOMOUS-OPERATIONS-GUIDE.md  (+5 more)
examples/: API.md  BASIC.md  BATCH.md  CACHING.md  CHAT.md  DOCUMENT_QA.md  ENSEMBLE.md  README.md  ROUTING.md  STREAMING.md  advanced-api-server.js  advanced-utils-demo.js  api-providers-demo.js  bitnet-example.js  enterprise-example.js  ollama-integration-test.js  ollama-quick-start.js
examples/basic/rust/: Cargo.toml
examples/basic/rust/src/: main.rs
k8s/: README.md  configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml
migrations/: 001_initial_schema.sql  004_monitoring_alerting.sql
models/: registry.json
public/: api-test.html  byok-interface.html  chat-test.html  docs-config.js  docs-server.js  docs-status.html  docs.html  enhanced-docs-api.js  enhanced-docs.html  index.html  manifest.json  robots.txt  sitemap.xml  test-api.html
scripts/: README.md  autonomous-update.sh  build-all-bindings.sh  build.js  cleanup-phase1.sh  cleanup-phase2.sh  cleanup-verify.sh  deploy-saas.sh  deploy.js  deploy.sh  env-manager.sh  fix-safe-eslint.js  monitor-health.sh  monitor.sh  prebuild-automation.js  recovery.sh  safe-eslint-autofix.js  security-setup.sh  setup-bitnet.js  setup-self-healing.sh  setup-startup.sh  simple-recovery.sh  test-all-bindings.sh  tier1-eslint-fixes.js
src/: index.js
ssl/: cert.pem  key.pem
tests/: basic.test.js  comprehensive-system-test.js  comprehensive-validation.test.js  core-modules.test.js  docs.test.js  edge-engine.test.js  examples.test.js  final-validation.test.js  final.test.js  production-improvements.test.js  router.initialize.test.js  simple.test.js  test-byok.js  wasm-engine.test.js  working.test.js
types/: index.d.ts
(+310 files in other folders)
