[package]
name = "llm-runner-router-wasm"
version = "1.2.1"
edition = "2021"
authors = ["Echo AI Systems <contact@echoai.systems>"]
description = "WebAssembly bindings for LLM Runner Router"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MCERQUA/LLM-Runner-Router"
repository = "https://github.com/MCERQUA/LLM-Runner-Router"
keywords = ["llm", "ai", "wasm", "webassembly", "router"]
categories = ["api-bindings", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# JavaScript integration
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Response",
  "Request",
  "Headers",
  "AbortController",
  "AbortSignal",
  "ReadableStream",
  "Worker",
  "MessageEvent",
  "Event",
  "EventTarget",
  "WebSocket",
  "MessagePort",
  "BroadcastChannel",
] }

# Async and futures
futures = "0.3"
wasm-streams = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# HTTP client for WASM
reqwest = { version = "0.11", features = ["json", "stream"], default-features = false }

# Error handling
thiserror = "1.0"

# Logging for WASM
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Optional: Crypto for random IDs
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.6", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Response",
  "Request",
  "Headers",
  "AbortController",
  "AbortSignal",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "Worker",
  "MessageEvent",
  "Event",
  "EventTarget",
  "WebSocket",
  "MessagePort",
  "BroadcastChannel",
  "Performance",
  "PerformanceEntry",
  "PerformanceNavigationTiming",
]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Enable all optimizations for WASM
opt-level = 3
lto = true
codegen-units = 1

# Reduce binary size
panic = "abort"

[package.metadata.wasm-pack.profile.release]
# Enable additional optimizations
wasm-opt = ["-O4", "--enable-mutable-globals"]