[package]
name = "llm-router-rust-example"
version = "1.0.0"
edition = "2021"
authors = ["LLM Router Team"]
description = "Basic Rust example for LLM Runner Router"
license = "MIT"

[[bin]]
name = "basic_inference"
path = "src/main.rs"

[dependencies]
# LLM Router binding (assuming it's published)
llm-runner-router = { path = "../../../bindings/rust" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (if needed for direct testing)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
test-log = "0.2"
env_logger = "0.10"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inference_benchmark"
harness = false

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true